# Echo_UI

./: .env.example  .gitignore  .mcp.json  CONVERSATION_SUMMARY.md  DEPLOY_INSTRUCTIONS.md  README-FRONTEND.md  README.md  README_CONSTRUCTION_QUICK_START.md  SETUP_INSTRUCTIONS.md  package.json  pyproject.toml  requirements.txt  vercel.json
database/schemas/: construction_schema.sql  fix_rls.sql  supabase_schema.sql
docs/: CONSTRUCTION_DOCS_POC.md  CONSTRUCTION_INTELLIGENCE_PLATFORM.md
frontend/: README.md  config.js  construction-search.html  index-modern.html  index.html  knowledge-graph-demo.html  proxy-server.py
frontend/css/: modern-styles.css  styles.css
frontend/js/: app.js  knowledge-graph.js  modern-app.js
scripts/: deploy_construction_schema.py
src/: construction_search_api.py
tools/: construction_doc_processor.py  test_construction_system.py
